hphp/hack/test/typecheck/trait_require_error_noextend.php.exp
File "trait_require_error_noextend.php", line 22, characters 16-17:
This class does not satisfy all the requirements of its traits or interfaces. (Typing[4111])
  File "trait_require_error_noextend.php", line 23, characters 7-12:
  This requires to extend or implement Super
  File "trait_require_error_noextend.php", line 15, characters 19-23:
  Required here
